# volumetric

./: .gitignore  README.md  pyproject.toml
examples/csrtest/: app.py  config.json
examples/csrtest/root/: config.json  index.py
examples/csrtest/root/api/get-data/: index.py
examples/csrtest/root/state-test/: index.py
examples/dbtest/: app.py
examples/dbtest/root/api/test/: index.py
examples/myapp/: app.py
examples/myapp/root/: index.py
examples/myapp/root/authenticated/: index.py
examples/myapp/root/dashboard/: index.py
src/tests/csrtest/: app.py
src/tests/csrtest/root/: index.py
src/tests/csrtest/static/_python/: view.py
src/tests/csrtest/static/js/: render-worker.js
src/tests/dbtest/: app.py  db.py
src/tests/dbtest/root/: index.py
src/tests/myapp/: annotations.py  app.py
src/tests/myapp/root/: index.py
src/tests/myapp/root/authenticated/: index.py
src/volumetric/: __init__.py  __main__.py  constants.py  csr.py  exceptions.py  fs_routes.py  xml_helpers.py
src/volumetric/csr/: internal.py  render.py  state.py  utils.py
src/volumetric/snippets/: conditionals.py  csr.py  error_handling.py  javascript.py  structure.py
