[project]
name = "volumetric-flask"
version = "2.0.4"
description = "The Volumetric Python Web Framework"
authors = [
    {name = "Carl Furtado",email = "carlzfurtado@gmail.com"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12,<=3.14"
dependencies = [
    "python-jsx (>=0.2.0,<0.3.0)",
    "flask (>=3.1.1,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]

[project.optional-dependencies]
csr = ["webtypy (>=0.1.7,<0.2.0)", "pyodide-py (==0.27.7)"]

[tool.poetry]
packages = [{include = "volumetric", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/User0332/volumetric"

[project.scripts]
volumetric = "volumetric.__main__:main"